# chord_recognition_models

./: .gitignore  dataset.py  evaluation_utils.py  main.py  pyproject.toml  train.py
HTv2/: dataset.py  main.py  model.py  requirements.txt  train.py
models/: __init__.py  btc.py
notebooks/: evaluate_our_checkpoints.ipynb  evaluate_our_checkpoints_colab_portable.ipynb  evaluate_our_checkpoints_self_contained.ipynb
