[project]
name = "htv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audioread>=3.0",
    "librosa>=0.10,<1.0",
    "numpy>=1.24,<3.0",
    "scipy>=1.10",
    "soundfile>=0.12",
    "torch>=2.1",
    "torchaudio>=2.1",
    "tqdm>=4.66",
]
